# code-approval-gates

./: .code-approval-gates.example.json  .code-approval-gates.ignore  .gitattributes  .gitignore  .quality-gate.ignore  .semantic-gate.ignore  LICENSE  MELHORIA.MD  PLANO_MELHORIAS.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
quality-gate/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  quality-check.ps1  quality-gate.txt
quality-gate/.github/workflows/: ci.yml
quality-gate/docker/: entrypoint.sh  quality-ci
quality-gate/examples/: dependency-graph.example.json  junit.example.xml  quality-evidence.example.json  quality-gate-policy.example.json  waivers.example.json
quality-gate/schemas/: dependency-graph.schema.json  quality-evidence.schema.json  quality-policy.schema.json  scope-manifest.schema.json
quality-gate/scripts/: verify-docker.ps1  verify-offline.ps1
quality-gate/sidecar/config/: eslint.config.mjs  gitleaks-ci.toml  gitleaksignore-ci  jscpd-ci.json  megalinter-ci.yml  osv-scanner-ci.toml  tflint-ci.hcl  trivyignore-ci
quality-gate/sidecar/quality_sidecar/: __init__.py  __main__.py  ci.py  cli.py  detectors.py  evidence.py  findings.py  i18n.py  metrics.py  policy.py  provenance.py  report.py  tools.py  waivers.py
quality-gate/skill/: quality-gate.md
quality-gate/tests/: image-smoke.sh  language_agnostic_wrapper.test.js  quality_check_wrapper.test.js  test_language_agnostic_gates.py  test_quality_ci.py  test_quality_contract_static.py  test_quality_sidecar.py
(+52 files in other folders)
