[project]
name = "harness-quality-sidecar"
version = "0.1.0"
description = "Container-side quality gate runner for Harness Gates projects."
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
quality-sidecar = "quality_sidecar.cli:entrypoint"
quality-check = "quality_sidecar.cli:entrypoint"
quality-check-internal = "quality_sidecar.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "sidecar" }

[tool.setuptools.packages.find]
where = ["sidecar"]
