[project]
name = "code-approval-quality-sidecar"
version = "0.3.0"
description = "Container-side quality gate runner for Code Approval Gates projects."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "defusedxml==0.7.1",
]

[project.scripts]
quality-sidecar = "quality_sidecar.cli:entrypoint"
quality-check = "quality_sidecar.cli:entrypoint"
quality-check-internal = "quality_sidecar.cli:entrypoint"
quality-ci = "quality_sidecar.ci:entrypoint"

[tool.setuptools]
package-dir = { "" = "sidecar" }

[tool.setuptools.packages.find]
where = ["sidecar"]
